[package]
name = "stoken"
version = "0.0.5"
authors = ["Jake <jake@jakeswenson.com>"]
edition = "2018"

description = "a rust based stoken implementation"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.3.0"
chrono = "0.4.6"
base64 = "0.10.0"
rust-crypto = "0.2.36"

[lib]
name = "stoken"
path = "src/lib.rs"

[[bin]]
name = "rstoken"
path = "src/bin.rs"
