[package]
name = "stoken"
version = "0.0.5"
authors = ["Jake <jake@jakeswenson.com>"]
edition = "2018"
description = "a rust based stoken implementation"
license = "MIT"
readme = "README.md"
keywords =  ["stoken", "rsa"]

[badges]
travis-ci = {repository = "jakeswenson/stoken", branch="master"}

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde-xml-rs = "^0"
chrono = "^0"
base64 = "^0"
rust-crypto = "^0"

[lib]
name = "stoken"
path = "src/lib.rs"

[[bin]]
name = "rstoken"
path = "src/bin.rs"
